# SpectraDB

./: .gitignore  MANIFEST.in  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  python-publish.yaml
SpectraDB/: base.py  dataloader.py  main.py  types.py  utils.py
SpectraDB/dataloaders/: base.py  dataloader.py
SpectraDB/utils/: __init__.py  utils.py
examples/: Example.csv  load_data.ipynb
examples/Only Dataloaders/: Example.SPA  Example.txt  Test.csv  load_data.ipynb  processed_Example.csv
examples/Using Database/: create_database.ipynb  db.sqlite
spectradb/: main.py  types.py
spectradb/dataloaders/: __init__.py  dataloader.py
spectradb/utils/: __init__.py  utils.py
src/spectradb/: __init__.py  main.py  types.py
src/spectradb/dataloaders/: __init__.py  base.py  dataloader.py
src/spectradb/utils/: __init__.py  decorators.py  utils.py
tests/dataloaders/: Test.csv  conftest.py  test_dataloaders.py
