[tool.poetry]
name = "SpectraDB"
version = "0.1.0"
description = ""
authors = ["Amulya Baniya"]
readme = "README.md"
packages = [{ include = "spectradb" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.1"
plotly = "^5.24.1"
nbformat = "^5.10.4"
matplotlib = "^3.9.2"
db-sqlite3 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
